# autopub-tweet

./: LICENSE  README.md  pyproject.toml
autopub_tweet/: plugin.py
